# canto

./: Cargo.toml  README.md
src/: lib.rs  novel.rs  paragraph.rs  parse_result.rs  priority.rs  token.rs  word.rs  word_parser.rs
src/default_words/: mod.rs  punctuation.rs
