[package]
name = "canto"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from", "deref", "deref_mut", "debug", "display"] }
fxhash = { version = "0.2.1", optional = true }
thiserror = "2.0.17"

[features]
default = ["fxhash"]

fxhash = ["dep:fxhash"]
